--- a/AK/ZXbSheet.tex
+++ b/AK/ZXbSheet.tex
@@ -10,17 +10,19 @@
 \pagestyle{empty}\begin{tikzpicture} 
 \draw[black] \shapeCard; \newline\newcommand{\Or}{\textbf{OR}};
 \draw[ultra thick] (\cardwidth/2, \cardheight*.45) rectangle (0, \cardheight); 
-\name{The Lizard League \image{n5} \hp{1}};
-\setup{Place King Lizard, Supreme Lizard, Iguana and Komodo Dragon into play in a random order. Place Plot Tokens on each of them equal to their Plot number. Then, flip this mat over.}
-\rules{Prevent all damage dealt to the Lizard League. The players win when the four Lizard leaders are defeated. When a Lizard Leader is Demoted, place that Lizard Leader so that it resolves last and add a plot token to it. When a player deals 5 damage in a turn to a Lizard leader, Demote it. The Lizard Leader closest to the level token is the Chief Lizard Leader. When a Lizard Leader Plots, remove a plot token from it. Then, if it has no plot tokens, resolve its effect.};\expDifficulty{};\nightDifficulty{};\exhaustEffect{The Chief gains 5 health.};
+\name{Anissa \image{n4} \hp{50}};
+\setup{Other than replacing The Cruise Kaiju, keep everything else the same. 
+If there are 2/3/4/5 Aid cards in the Aid discard pile, place Anissa's level 2/3/4/5 token into play.
+Then, Flip this mat over.}
+\rules{The Anissa turn order card is a third Villain turn. When the Anissa turn order card is drawn, resolve a Villain turn.};\expDifficulty{};\nightDifficulty{};\exhaustEffect{Shuffle a Villain turn order card in the turn order discard pile into the turn order deck.};
 \end{tikzpicture}
 
 \begin{tikzpicture} 
 \draw[black] \shapeCard; \newline\newcommand{\Or}{\textbf{OR}};
 \draw[ultra thick] (\cardwidth/2, \cardheight*.45) rectangle (0, \cardheight); 
-\name{Sequid2 \image{n6} \hp{60}};
-\setup{Set the sequid tokens next to this mat.}
-\rules{During any player's main phase, that player may spend 4 \Money to place a nemesis token on this mat. During any player's main phase, if this mat has 2 or nemesis tokens on it, that player may remove two nemesis tokens from this to discard all Sequid tokens in play and stun each enemy. newline For each Sequid on a player's prepped weapon, that weapon deals 1 less damage (minimum 0). For each Sequid on a supply pile, that card costs 1 more \Money to gain. For each Sequid on a player's mat, that player must spend 1 additional \Money to gain a charge or slot. \newline Sequid tokens are 1 health minions.};\expDifficulty{};\nightDifficulty{};\exhaustEffect{The exhausted player places five total Sequid tokens on any combination of prepped weapons and their mat.};
+\name{Thula \image{n10} \hp{50}};
+\setup{Place Vidor and Lucan next to this mat.}
+\rules{While Vidor or Lucan are in play, prevent damage to Thula. Vidor and Lucan cannot be defeated through "Defeat a minion" effects.};\expDifficulty{};\nightDifficulty{};\exhaustEffect{Discard the top card of the nemesis deck.};
 \end{tikzpicture}
 
 
