--- a/AK/ZXcList0.tex
+++ b/AK/ZXcList0.tex
@@ -5,190 +5,243 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
-\cardbackground{Kate} 
-\cardimage{M4} 
-\cardtitle{Tactics Kate} 
+\cardbackground{Fuel} 
+\cardimage{g6} 
+\cardtitle{Make This Work} 
 \cardborder{} 
-\cardcontent{You may discard a card to gain 1 \Money .} 
-\cardprice{1} 
-\sync{0.03}
-\supplyDeck{S} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Kate} 
-\cardimage{M4} 
-\cardtitle{Aggro Kate} 
-\cardborder{} 
-\cardcontent{You may discard a card to deal 1 damage.} 
-\cardprice{1} 
-\sync{0.03}
-\supplyDeck{S} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Kate} 
-\cardimage{M4} 
-\cardtitle{Support Kate} 
-\cardborder{} 
-\cardcontent{You may discard a card to have any ally heal 1.} 
-\cardprice{1} 
-\sync{0.03}
-\supplyDeck{S} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Kate} 
-\cardimage{M4} 
-\cardtitle{Tactics Kate} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money .} 
-\cardprice{2} 
-\sync{0.03}
-\supplyDeck{S} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Kate} 
-\cardimage{M4} 
-\cardtitle{Aggro Kate} 
-\cardborder{} 
-\cardcontent{Deal 2 damage.} 
-\cardprice{2} 
-\sync{0.03}
-\supplyDeck{S} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Kate} 
-\cardimage{M4} 
-\cardtitle{Support Kate} 
-\cardborder{} 
-\cardcontent{Any ally heals 1 and powers up.} 
-\cardprice{2} 
-\sync{0.03}
-\supplyDeck{S} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Kate} 
-\cardimage{M4} 
-\cardtitle{Tactics Kate} 
-\cardborder{} 
-\cardcontent{Gain 3 \Money . Homeworld heals 1.} 
+\cardcontent{Gain 2 \Money . \newline You may look at the top card of your deck. You may place that card in your discard pile.} 
 \cardprice{3} 
-\sync{0.03}
-\supplyDeck{S} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Kate} 
-\cardimage{M4} 
-\cardtitle{Aggro Kate} 
-\cardborder{} 
-\cardcontent{Deal 3 damage. Attack with any player's prepped weapon.} 
-\cardprice{3} 
-\sync{0.03}
-\supplyDeck{S} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Kate} 
-\cardimage{M4} 
-\cardtitle{Support Kate} 
-\cardborder{} 
-\cardcontent{Any ally heals 1, powers up, and draws a card.} 
-\cardprice{3} 
-\sync{0.03}
-\supplyDeck{S} 
+\sync{0.1}
+\supplyDeck{B} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Fuel} 
-\cardimage{M4} 
-\cardtitle{Concen-Kate} 
+\cardimage{g12} 
+\cardtitle{The B-Team} 
 \cardborder{} 
-\cardcontent{Power up. You may power down three times to upgrade one of your Kates.} 
-\cardprice{0} 
-\sync{0.03}
-\supplyDeck{S} 
+\cardcontent{Assist: The active player gains 1 \Money . \newline \newline  \newline Gain 2 \Money . } 
+\cardprice{4} 
+\sync{0.1}
+\myburn{Gain 1 \Money .} 
+\supplyDeck{C} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Fuel} 
+\cardimage{g12} 
+\cardtitle{The B-Team} 
+\cardborder{} 
+\cardcontent{Assist: The active player gains 1 \Money . \newline \newline  \newline Gain 2 \Money . } 
+\cardprice{4} 
+\sync{0.1}
+\myburn{Gain 1 \Money .} 
+\supplyDeck{C} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Fuel} 
+\cardimage{g9} 
+\cardtitle{Don't Need Anything More} 
+\cardborder{} 
+\cardcontent{Buy: Power Up. \newline  Gain 3 \Money . If All Clear, the City powers up. } 
+\cardprice{5} 
+\sync{0.1}
+\supplyDeck{C} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Fuel} 
+\cardimage{g9} 
+\cardtitle{Don't Need Anything More} 
+\cardborder{} 
+\cardcontent{Buy: Power Up. \newline  Gain 3 \Money . If All Clear, the City powers up. } 
+\cardprice{5} 
+\sync{0.1}
+\supplyDeck{C} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Fuel} 
+\cardimage{g15} 
+\cardtitle{That Was The Old Me} 
+\cardborder{} 
+\cardcontent{Buy: Any ally gains a slot. \newline \newline  \newline Gain 3 \Money .} 
+\cardprice{5} 
+\sync{0.1}
+\supplyDeck{C} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Fuel} 
+\cardimage{g15} 
+\cardtitle{That Was The Old Me} 
+\cardborder{} 
+\cardcontent{Buy: Any ally gains a slot. \newline \newline  \newline Gain 3 \Money .} 
+\cardprice{5} 
+\sync{0.1}
+\supplyDeck{C} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Fuel} 
+\cardimage{g11} 
+\cardtitle{Scared The Shit Out Of Me} 
+\cardborder{} 
+\cardcontent{Gain 3 \Money . If All Clear, you may lose 2 slots to put the top card from any supply pile into any player's hand.} 
+\cardprice{7} 
+\sync{0.1}
+\myburn{Evacuate.} 
+\supplyDeck{C} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Tech} 
+\cardimage{r9} 
+\cardtitle{Shoot Stuff} 
+\cardborder{} 
+\cardcontent{Any player gains a slot. \newline You may attack with any player's equipped weapon.} 
+\cardprice{3} 
+\sync{0.1}
+\supplyDeck{A} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Tech} 
+\cardimage{r9} 
+\cardtitle{Shoot Stuff} 
+\cardborder{} 
+\cardcontent{Any player gains a slot. \newline You may attack with any player's equipped weapon.} 
+\cardprice{3} 
+\sync{0.1}
+\supplyDeck{A} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Tech} 
+\cardimage{r5} 
+\cardtitle{get me outta here} 
+\cardborder{} 
+\cardcontent{Evacuate. Any player gains a slot. \newline \Or \newline All Clear: Power up. The City powers up twice.} 
+\cardprice{5} 
+\sync{0.1}
+\myburn{The City gains 1 health.} 
+\supplyDeck{A} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Tech} 
+\cardimage{r6} 
+\cardtitle{Cloning Device} 
+\cardborder{} 
+\cardcontent{Buy: Any player gains 2 health. \newline \newline  \newline Any ally draws two cards and equips a weapon.} 
+\cardprice{5} 
+\sync{0.1}
+\supplyDeck{A} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Weapon} 
-\cardimage{M1} 
-\cardtitle{Rampage} 
+\cardimage{s4} 
+\cardtitle{Arial Smash} 
 \cardborder{} 
-\cardcontent{Attack: Deal 1 damage. Immortal gains 1 rage.} 
-\cardprice{0} 
-\sync{0.03}
-\supplyDeck{S} 
+\cardcontent{Assist: The active player gains 1 \Money  \newline  Attack: Deal 2 damage. You may discard a card to deal an additional 1 damage.} 
+\cardprice{3} 
+\sync{0.1}
+\supplyDeck{D} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Fuel} 
-\cardimage{M1} 
-\cardtitle{Fury} 
+\cardbackground{Weapon} 
+\cardimage{s4} 
+\cardtitle{Arial Smash} 
 \cardborder{} 
-\cardcontent{Gain 1 \Money . Gain 1 rage.} 
-\cardprice{0} 
-\sync{0.03}
-\supplyDeck{S} 
+\cardcontent{Assist: The active player gains 1 \Money . \newline  \newline Attack: Deal 2 damage. You may discard a card to deal an additional 1 damage.} 
+\cardprice{3} 
+\sync{0.1}
+\supplyDeck{D} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Fuel} 
-\cardimage{M2} 
-\cardtitle{Shapeshift} 
+\cardbackground{Weapon} 
+\cardimage{s5} 
+\cardtitle{Make Way} 
 \cardborder{} 
-\cardcontent{Change form.} 
-\cardprice{0} 
-\sync{0.03}
-\supplyDeck{S} 
+\cardcontent{Attack: Deal 3 damage. If All Clear, deal an additional 2 damage. \newline OR \newline Attack: Deal 1 damage. Evacuate.} 
+\cardprice{4} 
+\sync{0.1}
+\supplyDeck{D} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Fuel} 
-\cardimage{M3} 
-\cardtitle{Kinetic Infusion} 
+\cardbackground{Weapon} 
+\cardimage{s5} 
+\cardtitle{Make Way} 
 \cardborder{} 
-\cardcontent{If you are not exhausted, gain 3 \Money, 1 charge and suffer 2 damage. Otherwise, destroy this.} 
-\cardprice{0} 
-\sync{0.03}
-\supplyDeck{S} 
+\cardcontent{Attack: Deal 3 damage. If All Clear, deal an additional 2 damage. \newline OR \newline Attack: Deal 1 damage. Evacuate.} 
+\cardprice{4} 
+\sync{0.1}
+\supplyDeck{D} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Form} 
-\cardimage{M2} 
-\cardtitle{Form1} 
+\cardbackground{Weapon} 
+\cardimage{s7} 
+\cardtitle{Stunning Strike} 
 \cardborder{} 
-\cardcontent{Weapons you attack with deal 1 additional damage. Discard a card at the start of your turn.} 
-\cardprice{0} 
-\sync{0.03}
-\supplyDeck{S} 
+\cardcontent{Attack: Deal 2 damage. } 
+\cardprice{4} 
+\sync{0.1}
+\myburn{Stun a minion.} 
+\supplyDeck{D} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Form} 
-\cardimage{M2} 
-\cardtitle{Form2} 
+\cardbackground{Weapon} 
+\cardimage{s13} 
+\cardtitle{Clustest Bomb} 
 \cardborder{} 
-\cardcontent{Cards cost you 1 less \Money  to gain or overcharge. Weapons you attack with deal 1 less damage (minimum 0).} 
-\cardprice{0} 
-\sync{0.03}
-\supplyDeck{S} 
+\cardcontent{Attack: Deal 2 damage. The city powers up. If All Clear, deal 3 damage.} 
+\cardprice{6} 
+\sync{0.1}
+\myburn{Deal 1 damage.} 
+\supplyDeck{E} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Form} 
-\cardimage{M2} 
-\cardtitle{Form3} 
+\cardbackground{Weapon} 
+\cardimage{s13} 
+\cardtitle{Clustest Bomb} 
 \cardborder{} 
-\cardcontent{When you gain a card, place it on top of any ally's deck.} 
-\cardprice{0} 
-\sync{0.03}
-\supplyDeck{S} 
+\cardcontent{Attack: Deal 2 damage. The city powers up. If All Clear, deal 3 damage.} 
+\cardprice{6} 
+\sync{0.1}
+\myburn{Deal 1 damage.} 
+\supplyDeck{E} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Weapon} 
+\cardimage{s14} 
+\cardtitle{Energy Surge At Home} 
+\cardborder{} 
+\cardcontent{Attack: Deal 5 damage. } 
+\cardprice{6} 
+\sync{0.1}
+\myburn{Any ally powers up.} 
+\supplyDeck{E} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Weapon} 
+\cardimage{s21} 
+\cardtitle{New 7 Weapon} 
+\cardborder{} 
+\cardcontent{Attack: Deal 4 damage. \newline The city powers up. \newline Each ally may draw a card and then discard a card.} 
+\cardprice{7} 
+\sync{0.1}
+\myburn{Any player gains a slot.} 
+\supplyDeck{F} 
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
