--- a/AK/ZXcList1.tex
+++ b/AK/ZXcList1.tex
@@ -5,350 +5,117 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
-\cardbackground{Fuel} 
-\cardimage{g1} 
-\cardtitle{Evac-Sphere} 
+\cardbackground{} 
+\cardimage{N3} 
+\cardtitle{Cruise Kaiju
+Normal Level 2} 
 \cardborder{} 
-\cardcontent{Gain 2 \Money  OR Destroy this. Evacuate.} 
-\cardprice{3} 
-\sync{0.03}
-\supplyDeck{B} 
+\cardcontent{Activate: Any player discards 1 card. The City suffers 2 damage.} 
+\cardprice{} 
+\levelNum{2} 
+\minionBonus{0} 
+\sync{0.1}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Fuel} 
-\cardimage{g1} 
-\cardtitle{Evac-Sphere} 
+\cardbackground{} 
+\cardimage{N3} 
+\cardtitle{Cruise Kaiju
+Normal Level 3} 
 \cardborder{} 
-\cardcontent{Gain 2 \Money  OR Destroy this. Evacuate.} 
-\cardprice{3} 
-\sync{0.03}
-\supplyDeck{B} 
+\cardcontent{Activate: Any player discards 1 card. The City suffers 4 damage.} 
+\cardprice{} 
+\levelNum{3} 
+\minionBonus{0} 
+\sync{0.1}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Fuel} 
-\cardimage{g2} 
-\cardtitle{5,000,000 Dollars} 
+\cardbackground{} 
+\cardimage{N12} 
+\cardtitle{Levy2
+Normal Level 2} 
 \cardborder{} 
-\cardcontent{Gain 2 \Money . All Clear: You may put the next card you gain this turn into any ally's hand.} 
-\cardprice{3} 
-\sync{0.03}
-\supplyDeck{B} 
+\cardcontent{Instant: Minions in play gain 2 life. \newline Activate: If Dimensional Rift is in play, any player powers down or discard the top card of the villain deck. Otherwise, increase the Portal Track.} 
+\cardprice{} 
+\levelNum{2} 
+\minionBonus{2} 
+\sync{0.1}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Fuel} 
-\cardimage{g2} 
-\cardtitle{5,000,000 Dollars} 
+\cardbackground{} 
+\cardimage{N12} 
+\cardtitle{Levy3
+Normal Level 3} 
 \cardborder{} 
-\cardcontent{Gain 2 \Money . All Clear: You may put the next card you gain this turn into any ally's hand.} 
-\cardprice{3} 
-\sync{0.03}
-\supplyDeck{B} 
+\cardcontent{Instant: Minions in play gain 2 life. Increase the Portal Track by 2. \newline Activate: If Dimensional Rift is in play, any player powers down twice or discard the top card of the villain deck. Otherwise, increase the Portal Track.} 
+\cardprice{} 
+\levelNum{3} 
+\minionBonus{4} 
+\sync{0.1}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Fuel} 
-\cardimage{g3} 
-\cardtitle{GDA Hospital} 
+\cardbackground{} 
+\cardimage{N12} 
+\cardtitle{Levy4
+Normal Level 4} 
 \cardborder{} 
-\cardcontent{Gain 3 \Money . Any player heals 1. OR Gain 1 \Money . Evacuate.} 
-\cardprice{6} 
-\sync{0.03}
-\supplyDeck{C} 
+\cardcontent{Instant: Minions in play gain 2 life. Increase the Portal Track by 2. \newline Activate: If Dimensional Rift is in play,  discard the top card of the villain deck. Otherwise, increase the Portal Track.} 
+\cardprice{} 
+\levelNum{4} 
+\minionBonus{6} 
+\sync{0.1}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Fuel} 
-\cardimage{g3} 
-\cardtitle{GDA Hospital} 
+\cardbackground{} 
+\cardimage{N10} 
+\cardtitle{Thula2
+Normal Level 2} 
 \cardborder{} 
-\cardcontent{Gain 3 \Money . Any player heals 1. OR Gain 1 \Money . Evacuate.} 
-\cardprice{6} 
-\sync{0.03}
-\supplyDeck{C} 
+\cardcontent{Instant: Minions gain 2 life. Place Lucan into play.} 
+\cardprice{} 
+\levelNum{2} 
+\minionBonus{2} 
+\sync{0.1}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Fuel} 
-\cardimage{g4} 
-\cardtitle{Don't Need Anything More} 
+\cardbackground{} 
+\cardimage{N10} 
+\cardtitle{Thula3
+Normal Level 3} 
 \cardborder{} 
-\cardcontent{Gain 3 \Money . Power up. OR All Clear: Homeworld powers up.} 
-\cardprice{5} 
-\sync{0.03}
-\supplyDeck{C} 
+\cardcontent{Instant: Minions besides Lucan gain 2 life. Place Vidor into play. \newline Rules: If Vidor and Lucan are not in play, draw an additional card from the Villain deck.} 
+\cardprice{} 
+\levelNum{3} 
+\minionBonus{4} 
+\sync{0.1}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Fuel} 
-\cardimage{g4} 
-\cardtitle{Don't Need Anything More} 
+\cardbackground{} 
+\cardimage{N10} 
+\cardtitle{Thula4
+Normal Level 4} 
 \cardborder{} 
-\cardcontent{Gain 3 \Money . Power up. OR All Clear: Homeworld powers up. } 
-\cardprice{5} 
-\sync{0.03}
-\supplyDeck{C} 
+\cardcontent{Instant: Minions besides Lucan and Vidor gain 2 life. \newline Rules: If a player deals 10 damage to Thula in a turn, stun this. \newline Activate: Any player suffers 3 damage. The City suffers 3 damage.} 
+\cardprice{} 
+\levelNum{4} 
+\minionBonus{6} 
+\sync{0.1}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Fuel} 
-\cardimage{g5} 
-\cardtitle{Scared The Shit Out Of Me} 
+\cardbackground{} 
+\cardimage{} 
+\cardtitle{Blank} 
 \cardborder{} 
-\cardcontent{Gain 3 \Money . OR All Clear: Lose a slot to put a card from any supply pile into any player's hand.} 
-\cardprice{7} 
-\sync{0.03}
-\myburn{You may power down. If you do, Evacuate.} 
-\supplyDeck{C} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Weapon} 
-\cardimage{s1} 
-\cardtitle{Make Way} 
-\cardborder{} 
-\cardcontent{Attack: Deal 3 damage. OR Deal 1 damage. If this defeats a minion from the villain deck, Evacuate.} 
-\cardprice{4} 
-\sync{0.03}
-\supplyDeck{D} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Weapon} 
-\cardimage{s1} 
-\cardtitle{Make Way} 
-\cardborder{} 
-\cardcontent{Attack: Deal 3 damage. OR All Clear Attack: Deal 1 damage. If this defeats a minion from the villain deck, Evacuate.} 
-\cardprice{4} 
-\sync{0.03}
-\supplyDeck{D} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Weapon} 
-\cardimage{s2} 
-\cardtitle{Vengeance} 
-\cardborder{} 
-\cardcontent{Attack: Deal 2 damage. Gain 1 \Money . OR All Clear Attack: Deal 4 damage.} 
-\cardprice{3} 
-\sync{0.03}
-\supplyDeck{D} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Weapon} 
-\cardimage{s2} 
-\cardtitle{Vengeance} 
-\cardborder{} 
-\cardcontent{Attack: Deal 2 damage. Gain 1 \Money . OR All Clear Attack: Deal 4 damage.} 
-\cardprice{3} 
-\sync{0.03}
-\supplyDeck{D} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Weapon} 
-\cardimage{s3} 
-\cardtitle{Catch!} 
-\cardborder{} 
-\cardcontent{Attack: Deal 2 damage. OR All Clear Attack: Destroy this. Deal 4 damage. Power up.} 
-\cardprice{2} 
-\sync{0.03}
-\supplyDeck{D} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Weapon} 
-\cardimage{s3} 
-\cardtitle{Catch!} 
-\cardborder{} 
-\cardcontent{Attack: Deal 2 damage. OR All Clear Attack: Destroy this. Deal 4 damage. Power up.} 
-\cardprice{2} 
-\sync{0.03}
-\supplyDeck{D} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Weapon} 
-\cardimage{s4} 
-\cardtitle{Pink Glass Shit} 
-\cardborder{} 
-\cardcontent{Attack: Deal 5 damage. Discard a card. If the card discarded this way costs 1 \Money  or more, Evacuate.} 
-\cardprice{5} 
-\sync{0.03}
-\supplyDeck{E} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Weapon} 
-\cardimage{s4} 
-\cardtitle{Pink Glass Shit} 
-\cardborder{} 
-\cardcontent{Attack: Deal 5 damage. Discard a card. If the card discarded this way costs 1 \Money  or more, Evacuate.} 
-\cardprice{5} 
-\sync{0.03}
-\supplyDeck{E} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Weapon} 
-\cardimage{s5} 
-\cardtitle{Clustest Bomb} 
-\cardborder{} 
-\cardcontent{Attack: Deal 3 damage. All Clear: Deal 2 damage.} 
-\cardprice{6} 
-\sync{0.03}
-\myburn{Deal 1 damage.} 
-\supplyDeck{E} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Weapon} 
-\cardimage{s5} 
-\cardtitle{Clustest Bomb} 
-\cardborder{} 
-\cardcontent{Attack: Deal 3 damage. All Clear: Deal 2 damage.} 
-\cardprice{6} 
-\sync{0.03}
-\myburn{Deal 1 damage.} 
-\supplyDeck{E} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Weapon} 
-\cardimage{s6} 
-\cardtitle{Normal Human Superhero} 
-\cardborder{} 
-\cardcontent{Attack: Deal 1 damage. Evacuate. OR All Clear Attack: Deal 4 damage. The City powers up.} 
-\cardprice{5} 
-\sync{0.03}
-\supplyDeck{E} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Weapon} 
-\cardimage{s6} 
-\cardtitle{Normal Human Superhero} 
-\cardborder{} 
-\cardcontent{Attack: Deal 1 damage. Evacuate. OR All Clear Attack: Deal 4 damage. The City powers up.} 
-\cardprice{5} 
-\sync{0.03}
-\supplyDeck{E} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Weapon} 
-\cardimage{s7} 
-\cardtitle{Not Holding Back} 
-\cardborder{} 
-\cardcontent{Attack: Deal 6 damage. All Clear: Deal 4 additional damage.} 
-\cardprice{7} 
-\sync{0.03}
-\supplyDeck{F} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Weapon} 
-\cardimage{s7} 
-\cardtitle{Not Holding Back} 
-\cardborder{} 
-\cardcontent{Attack: Deal 6 damage. All Clear: Deal 4 additional damage.} 
-\cardprice{7} 
-\sync{0.03}
-\supplyDeck{F} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Weapon} 
-\cardimage{s8} 
-\cardtitle{Dragon's Breath Sniper} 
-\cardborder{} 
-\cardcontent{Attack: Deal 5 damage. Evacuate. OR All Clear Attack: Destroy three cards in your hand. Deal 12 damage.} 
-\cardprice{8} 
-\sync{0.03}
-\supplyDeck{F} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Weapon} 
-\cardimage{s8} 
-\cardtitle{Dragon's Breath Sniper} 
-\cardborder{} 
-\cardcontent{Attack: Deal 5 damage. Evacuate. OR All Clear Attack: Destroy three cards in your hand. Deal 12 damage.} 
-\cardprice{8} 
-\sync{0.03}
-\supplyDeck{F} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Tech} 
-\cardimage{r1} 
-\cardtitle{Earpiece} 
-\cardborder{} 
-\cardcontent{Power up the City. OR Power down the City to Evacuate.} 
-\cardprice{3} 
-\sync{0.03}
-\myburn{You may power down. If you do, Power up the City.} 
-\supplyDeck{A} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Tech} 
-\cardimage{r1} 
-\cardtitle{Earpiece} 
-\cardborder{} 
-\cardcontent{Power up the City You may power down to power up the City. OR Power down the City to Evacuate.} 
-\cardprice{3} 
-\sync{0.03}
-\myburn{You may power down. If you do, Power up the City.} 
-\supplyDeck{A} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Tech} 
-\cardimage{r2} 
-\cardtitle{YEET} 
-\cardborder{} 
-\cardcontent{The City powers up. Any player may destroy a card in hand. If that card cost 1 \Money  or more, Evacuate.} 
-\cardprice{4} 
-\sync{0.03}
-\supplyDeck{A} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Tech} 
-\cardimage{r3} 
-\cardtitle{Unhinged Vortechs} 
-\cardborder{} 
-\cardcontent{All Clear Assist: The Active Player returns a fuel or tech from their discard pile to their hand. \newline \newline  Any ally draws 3 cards, then discards a card in hand. If the discarded card cost 1 \Money  or more, Evacuate.} 
-\cardprice{7} 
-\sync{0.03}
-\supplyDeck{A} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Tech} 
-\cardimage{r4} 
-\cardtitle{Blasting Sync} 
-\cardborder{} 
-\cardcontent{Attack with any player's weapon and return it to their hand. OR All Clear: Attack with any player's weapon three times, then destroy it.} 
-\cardprice{6} 
-\sync{0.03}
-\supplyDeck{A} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Tech} 
-\cardimage{r5} 
-\cardtitle{get me outta here} 
-\cardborder{} 
-\cardcontent{Evacuate OR All Clear: Power up. The City powers up twice.} 
-\cardprice{5} 
-\sync{0.03}
-\myburn{The City heals 1.} 
-\supplyDeck{A} 
+\cardcontent{} 
+\cardprice{} 
+\sync{}
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
