--- a/AK/ZXcList2.tex
+++ b/AK/ZXcList2.tex
@@ -4,5 +4,14 @@
 \input{colors.tex}
 \input{tikzcardsTwo.tex}
 \begin{document}
-\begin{center}\end{center}
-\end{document}
+\begin{center}\begin{tikzpicture} 
+\cardbackground{Strike} 
+\cardimage{n1} 
+\cardtitle{THE EARTH RECLAIMS HER STOLEN FLESH} 
+\cardborder{} 
+\cardcontent{Increase the Heat Track by 4. \newline \Or \newline Any player loses 2 slots and suffers 3 damage. Reduce the Heat Track by 2.} 
+\cardprice{} 
+\sync{0.1}
+\playerCount{All} 
+\end{tikzpicture}
+\hspace{-4mm}
