--- a/AK/ZXhwList.tex
+++ b/AK/ZXhwList.tex
@@ -5,13 +5,73 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
-\cardimage{} 
+\cardimage{city} 
 \cardtitle{Martian Ship} 
 \cardborder{} 
-\cardcontent{Stun each enemy. The villain loses a Hive Mind token.} 
-\cardprice{5} 
+\cardcontent{Activate during any player's main phase: newline Deal 1 damage. Repeat this four times.} 
+\cardprice{3} 
 \cardhp{30} 
-\sync{0.02}
+\sync{0.09}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardimage{city} 
+\cardtitle{Washington Monument} 
+\cardborder{} 
+\cardcontent{Activate during any player's main phase: newline Deal 3 damage. If all clear, deal an additional 3 damage.} 
+\cardprice{2} 
+\cardhp{28} 
+\sync{0.09}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardimage{city} 
+\cardtitle{The Cruise Ship} 
+\cardborder{} 
+\cardcontent{Activate during any player's main phase: newline Evacuate twice. If all clear, deal 12 damage.} 
+\cardprice{4} 
+\cardhp{33} 
+\sync{0.09}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardimage{city} 
+\cardtitle{Debbie's House} 
+\cardborder{} 
+\cardcontent{Activate during any player's main phase: newline Any player gains 2 health and a card from the supply that costs 5 \Money  or less and places it on top of their deck.} 
+\cardprice{3} 
+\cardhp{28} 
+\sync{0.09}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardimage{city} 
+\cardtitle{Military Base} 
+\cardborder{} 
+\cardcontent{Activate during any player's main phase: newline Any player places a spell in their discard pile into hand. Any player gains a slot. Any player equips a weapon.} 
+\cardprice{3} 
+\cardhp{29} 
+\sync{0.09}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardimage{city} 
+\cardtitle{Thraxa} 
+\cardborder{} 
+\cardcontent{Activate during any player's main phase: newline Evacuate. The City gains 2 health. If all clear, any ally draws three cards.} 
+\cardprice{3} 
+\cardhp{32} 
+\sync{0.09}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardimage{city} 
+\cardtitle{Night City} 
+\cardborder{} 
+\cardcontent{Activate during any player's main phase: newline Any ally draws a card and powers up.} 
+\cardprice{1} 
+\cardhp{18} 
+\sync{0.09}
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
