--- a/AK/charSheetBulletproof.tex
+++ b/AK/charSheetBulletproof.tex
@@ -5,9 +5,9 @@
 \cardborder 
 \basicinfo 
 \name{Bulletproof}{M3}
-\ability{Mass Redirector: Activate during your main phase: \newline Gain 6 life. \newline If you are exhausted, any ally gains 5 life instead.}{5}
-\startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
-\startingHand{Crystal}{Crystal}{Kinetic Infusion}{Spark}{Spark}
+\ability{Mass Redirector: Activate during your main phase: \newline Any player gains 5 life. \newline \Or \newline Deal damage equal to your missing health.}{5}
+\startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
+\startingHand{Kinetic Infusion}{Crystal}{Crystal}{Crystal}{Spark}
 \notes{}
 
 \slots{2}{4}
