--- a/AK/charSheetInvincible.tex
+++ b/AK/charSheetInvincible.tex
@@ -4,13 +4,13 @@
 \begin{tikzpicture} 
 \cardborder 
 \basicinfo 
-\name{Invincible}{}
-\ability{Barrel Through: Activate during your main phase: newline Deal 5 damage. If that damage defeated a Minion, repeat this effect dealing 1 less damage.}{5}
-\startingDeck{}{Crystal}{Crystal}{Spark}{Spark}
-\startingHand{Crystal}{Crystal}{Crystal}{}{Spark}
-\notes{Extra rules for the character}
+\name{Invincible}{M7}
+\ability{NOT THE THRAXANS: Activate during your main phase: \newline Evacuate. The City powers up. If All Clear, deal 3 damage.}{3}
+\startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Unleashed}
+\startingHand{You'll Be Okay}{Crystal}{Crystal}{Spark}{Spark}
+\notes{}
 
-\slots{1}{4}
+\slots{2}{4}
 
 \end{tikzpicture}
 
