--- a/AK/charSheetRex Splode.tex
+++ b/AK/charSheetRex Splode.tex
@@ -4,10 +4,10 @@
 \begin{tikzpicture} 
 \cardborder 
 \basicinfo 
-\name{Rex Splode}{}
-\ability{BOOM BOOM: Activate during your main phase: newline Attack with one of your Weapons twice and destroy it. Gain a card from the supply that costs less than the destroyed Weapon. Then, gain another card from the supply that costs less than the destroyed Weapon. }{4}
-\startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{}
-\startingHand{Crystal}{Crystal}{Crystal}{Crystal}{Crystal}
+\name{Rex Splode}{M10}
+\ability{Fireworks: Activate during your main phase: \newline Destroy a card in your hand or discard pile. Repeat this twice. Deal damage equal to the total cost of the cards destroyed this way.}{5}
+\startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Ignite}
+\startingHand{Crystal}{Crystal}{Crystal}{Gather Scrap}{Spark}
 \notes{}
 
 \slots{1}{4}
