--- a/AK/charSheetImmortal.tex
+++ b/AK/charSheetImmortal.tex
@@ -5,10 +5,10 @@
 \cardborder 
 \basicinfo 
 \name{Immortal}{M1}
-\ability{Focus: Activate during your main phase: newline Set your Rage to any number 0-3.}{3}
+\ability{Where's Omni-man?!?!?!: Activate during your main phase: \newline Gain 2 rage. Place up to two weapons in your discard pile on top of your deck.}{3}
 \startingDeck{Crystal}{Crystal}{Crystal}{Fury}{Spark}
 \startingHand{Crystal}{Crystal}{Crystal}{Rampage}{Spark}
-\notes{At the start of Immortal's turn, if he has 3 or more Rage, cast each of his equipped weapons. Then, cast each weapon in his hand. Weapons cast either way deal 2 additional damage. Then, Immortal discards any number of cards, loses all of his rage and ends his turn.}
+\notes{At the start of Immortal's turn, if he has 4 or more Rage, he attacks with each of his equipped weapons. Then, he attacks with each weapon in his hand. Weapons attacked with either way deal 1 additional damage. Then, Immortal discards each card in hand and loses all of his rage.}
 
 \slots{2}{4}
 
