--- a/AK/charSheetShapesmith.tex
+++ b/AK/charSheetShapesmith.tex
@@ -5,12 +5,12 @@
 \cardborder 
 \basicinfo 
 \name{Shapesmith}{M2}
-\ability{Enhance: Activate during your main phase: Change forms. Until end of turn, double all effects from that form.}{3}
+\ability{Enhance: Activate during your main phase: Change forms. \newline Gain 4 \Money  OR Attack with any player's equipped weapon. Return that weapon to their hand.}{4}
 \startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
 \startingHand{Crystal}{Crystal}{Crystal}{Shapeshift}{Spark}
-\notes{Place the three form tokens next to Shapesmith's mat. Shapesmith doesn't start in a form. When Shapesmith changes form, he discards his current form token, if he has one and then chooses a different form token.}
+\notes{Place the form tokens next to Shapesmith's mat. Shapesmith doesn't start in a form. When Shapesmith changes form, he discards his current form token, if he has one and then chooses a different form token.}
 
-\slots{1}{2}
+\slots{1}{3}
 
 \end{tikzpicture}
 
